--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,3 +14,10 @@
 <link rel="stylesheet" href="/public/js/prettify/prettify.css">
 <link rel="stylesheet" href="/public/css/base.css">
 <link href="/pages/atom.xml" rel="alternate" title="{{site.title}}" type="application/atom+xml">
+<script type="text/javascript" >
+var secret =  {{ page.secret }} ;
+	alert("secret"+secret);
+	if(secret){
+		alert("你没有权限查看这篇文章。");
+	}
+</script>
