--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,6 @@
 var secret =  {{ page.secret }} ;
 	alert("secret"+secret);
 	if(secret){
-		alert("ÄãÃ»ÓĞÈ¨ÏŞ²é¿´ÕâÆªÎÄÕÂ¡£");
+		alert("ä½ æ²¡æœ‰æƒé™æŸ¥çœ‹è¿™ç¯‡æ–‡ç« ã€‚");
 	}
 </script>
