--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,9 @@
 <script src="/public/js/jquery.pjax.js"></script>
 <script src="/public/js/prettify/prettify.js"></script>
 <script src="/public/js/base.js"></script>
+
+<script src="/public/js/jquery.fancybox.pack.js"></script>
+
 <!--
 <script src="/public/js/jquery.scrollUp.js"></script>
 -->
