--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,8 @@
 <script src="/public/js/prettify/prettify.js"></script>
 <script src="/public/js/base.js"></script>
 
-<script src="/public/js/jquery.fancybox.pack.js"></script>
+<script src="/public/js/fancybox/jquery.fancybox.pack.js"></script>
+<script type="text/javascript" src="/public/js/fancybox/jquery.fancybox-buttons.js?v=1.0.5"></script>
 
 <!--
 <script src="/public/js/jquery.scrollUp.js"></script>
