--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,7 @@
 <link rel="stylesheet" href="/public/js/prettify/prettify.css">
 <link rel="stylesheet" href="/public/css/base.css">
 
-<link rel="stylesheet" href="/public/css/jquery.fancybox.css" media="screen">
+<link rel="stylesheet" href="/public/css/fancybox/jquery.fancybox.css" media="screen">
+<link rel="stylesheet" type="text/css" href="/public/css/fancybox/jquery.fancybox-buttons.css?v=1.0.5" />
 
 <link href="/pages/atom.xml" rel="alternate" title="{{site.title}}" type="application/atom+xml">
