--- a/public/css/fancybox/jquery.fancybox.css
+++ b/public/css/fancybox/jquery.fancybox.css
@@ -78,8 +78,7 @@
 }
 
 #fancybox-loading, .fancybox-close, .fancybox-prev span, .fancybox-next span {
-	/*background-image: url(fancybox_sprite.png);*/
-	background-image: url(../img/fancybox/fancybox_sprite.png);
+	background-image: url(fancybox_sprite.png);
 }
 
 #fancybox-loading {
@@ -97,8 +96,7 @@
 #fancybox-loading div {
 	width: 44px;
 	height: 44px;
-	/*background: url(fancybox_loading.gif) center center no-repeat;*/
-	background: url(../img/fancybox/fancybox_loading.gif) center center no-repeat;
+	background: url(fancybox_loading.gif) center center no-repeat;
 }
 
 .fancybox-close {
@@ -118,9 +116,7 @@
 	height: 100%;
 	cursor: pointer;
 	text-decoration: none;
-	/* helps IE */
-	/*background: transparent url(blank.gif);*/ 
-	background: transparent url(../img/fancybox/blank.gif);
+	background: transparent url(blank.gif); /* helps IE */
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	z-index: 8040;
 }
@@ -189,8 +185,7 @@
 	overflow: hidden;
 	display: none;
 	z-index: 8010;
-	/*background: url(fancybox_overlay.png);*/
-	background: url(../img/fancybox/fancybox_overlay.png);
+	background: url(fancybox_overlay.png);
 }
 
 .fancybox-overlay-fixed {
