--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -3,3 +3,8 @@
   	<i class="fa fa-comment-o fa-lg" style="color: #16a095;"></i>     <!-- 修改显示评论按钮图标-->
   </button>
 </div>
+
+<div id="search-container">
+<input type="text" id="search-input" placeholder="search...">
+<ul id="results-container"></ul>
+</div>
