--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,6 +1,22 @@
 <!doctype html>
 <html>
 <head>
+
+<script src="/public/js/jekyll-search.js"></script>
+<script type="text/javascript">
+  SimpleJekyllSearch({
+	searchInput: document.getElementById('search-input'),
+	resultsContainer: document.getElementById('results-container'),
+	json: '/search.json',
+	//json: 'http://localhost:4000/search.json',
+	searchResultTemplate: '<li><a href="{url}" title="{desc}">{title}</a></li>',
+	noResultsText: 'No results found',
+	limit: 10,
+	fuzzy: false,
+	exclude: ['Welcome']
+  })
+</script>
+
   {% include header.html %}
 </head>
 <body>
