--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,8 @@
 <script src="/public/js/fancybox/jquery.fancybox.pack.js"></script>
 <script src="/public/js/fancybox/jquery.fancybox-buttons.js"></script>
 
+<script src="/public/js/jquery.simplemusic.js"></script>
+
 <script type="text/javascript">
   (function(w,d,t,u,n,s,e){w['SwiftypeObject']=n;w[n]=w[n]||function(){
   (w[n].q=w[n].q||[]).push(arguments);};s=d.createElement(t);
@@ -32,6 +34,8 @@
     $('a[href="#{{ site.active }}"]').tab('show');	
 </script>
 
+ <div id="musicPlayer"></div>
+ <script>
 
 <!--button是右上方导航和显示目录的按钮-->
 
