--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,6 +37,11 @@
     $('a[href="#{{ site.active }}"]').tab('show');	
 </script>
 
+<script>
+
+$("#musicPlayer").simplemusic({autoplay:true,loop:true,urls:["Kalimba.mp3","http://m1.music.126.net/gpi8Adr_-pfCuP7ZXk_F2w==/2926899953898363.mp3"]});
+
+</script>
 
 
 
