--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,7 +39,14 @@
 
 <script>
 
-$("#musicPlayer").simplemusic({autoplay:true,loop:true,urls:["Kalimba.mp3","http://m1.music.126.net/gpi8Adr_-pfCuP7ZXk_F2w==/2926899953898363.mp3"]});
+$("#musicPlayer").simplemusic({autoplay:true,loop:true,urls:[
+"http://7xnlfe.com1.z0.glb.clouddn.com/Electric%20Romeo-Immediate%20Music.mp3",
+"http://7xnlfe.com1.z0.glb.clouddn.com/Lost-Apple%20&%20Stone.mp3",
+"http://7xnlfe.com1.z0.glb.clouddn.com/Sunrise-Catie%20Mckinney.mp3",
+"http://7xnlfe.com1.z0.glb.clouddn.com/Perfect%20Circle-Katie%20Melua.mp3",
+"http://7xnlfe.com1.z0.glb.clouddn.com/El%20Dorado%20%28Dubstep%20Remix%29-Two%20Steps%20From%20Hell.mp3"，
+"http://7xnlfe.com1.z0.glb.clouddn.com/Violin%20Concerto%20In%20E%20Minor,%20Op.64-%20II.%20Andante-Leila%20Josefowicz.mp3"
+]});
 
 </script>
 
