--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,7 +40,7 @@
 <script>
 
 $("#musicPlayer").simplemusic({autoplay:false,loop:true,urls:[
-"http://7xnlfe.com1.z0.glb.clouddn.com/Electric%20Romeo-Immediate%20Music.mp3",
+"/public/mus/Electric Romeo-Immediate Music.mp3",
 "http://7xnlfe.com1.z0.glb.clouddn.com/Lost-Apple%20&%20Stone.mp3",
 "http://7xnlfe.com1.z0.glb.clouddn.com/Sunrise-Catie%20Mckinney.mp3",
 "http://7xnlfe.com1.z0.glb.clouddn.com/Perfect%20Circle-Katie%20Melua.mp3",
