--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,8 +40,8 @@
 <script>
 
 $("#musicPlayer").simplemusic({autoplay:false,loop:true,urls:[
-"/public/mus/Electric Romeo-Immediate Music.mp3",
-"http://3gods.com/public/mus/Electric Romeo-Immediate Music.mp3"
+"/public/mus/Electric.mp3",
+"http://3gods.com/public/mus/Electric.mp3"
 ]});
 
 </script>
