--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,14 +22,6 @@
 
 <script src="/public/js/jquery.simplemusic.js"></script>
 
-<script type="text/javascript">
-  (function(w,d,t,u,n,s,e){w['SwiftypeObject']=n;w[n]=w[n]||function(){
-  (w[n].q=w[n].q||[]).push(arguments);};s=d.createElement(t);
-  e=d.getElementsByTagName(t)[0];s.async=1;s.src=u;e.parentNode.insertBefore(s,e);
-  })(window,document,'script','//s.swiftypecdn.com/install/v2/st.js','_st');
-  
-  _st('install','HaqozDqL2rzAs_gwBmLc','2.0.0');
-</script>
 <!--
 <script src="/public/js/jquery.scrollUp.js"></script>
 -->
@@ -40,8 +32,12 @@
 <script>
 
 $("#musicPlayer").simplemusic({autoplay:false,loop:true,urls:[
-"/public/mus/Electric.mp3",
-"http://3gods.com/public/mus/Electric.mp3"
+"/public/mus/Sunrise.mp3",
+"/public/mus/Lost.mp3",
+"/public/mus/ElectricRemo.mp3",
+"/public/mus/PerfectCircle.mp3",
+"/public/mus/ELDorado.mp3",
+"/public/mus/ViolinConcerto.mp3"
 ]});
 
 </script>
