sm summary porker

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,14 +31,7 @@
 
 <script>
 
-$("#musicPlayer").simplemusic({autoplay:false,loop:true,urls:[
-"/public/mus/Sunrise.mp3",
-"/public/mus/Lost.mp3",
-"/public/mus/ElectricRemo.mp3",
-"/public/mus/PerfectCircle.mp3",
-"/public/mus/ELDorado.mp3",
-"/public/mus/ViolinConcerto.mp3"
-]});
+$("#musicPlayer").simplemusic({autoplay:false,loop:true});
 
 </script>
 
