--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -3,3 +3,8 @@
   	<i class="fa fa-comment-o fa-lg" style="color: #16a095;"></i>     <!-- 修改显示评论按钮图标-->
   </button>
 </div>
+
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2123019"></script>
+<!-- UY END -->
