--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
 
 <script>
 
-$("#musicPlayer").simplemusic({autoplay:false,loop:true});
+$("#musicPlayer").simplemusic({autoplay:false,loop:false});
 
 </script>
 
