--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,6 +21,7 @@
 <script src="/public/js/fancybox/jquery.fancybox-buttons.js"></script>
 
 <script src="/public/js/jquery.simplemusic.js"></script>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2123019"></script>
 
 <!--
 <script src="/public/js/jquery.scrollUp.js"></script>
