--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -16,6 +16,7 @@
         <li><a class="pjaxlink" href="/pages/others.html">其他</a></li>
        <!-- <li><a href="#tags" data-toggle="tab">{{ site.locals.tags }}</a></li>  -->
         <li><a class="pjaxlink" href="/pages/archive.html">{{ site.locals.archive }}</a></li>
+        <li><a class="pjaxlink" href="/pages/resume.html">简历</a></li>
       </ul>
     </div>
 
