--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,13 +3,14 @@ layout: base
 ---
 
 <div class="row">
+  <!-- 文章标题 -->
   <div class="col-md-13 aside3-title">
     <br>
     <h2 id="#identifier">{{ page.title }}</h2>
     {{ site.author.name }} &nbsp;&nbsp;  {{ page.date | date:"%Y-%m-%d" }}
   </div>
 
-  <!-- 文章 -->
+  <!-- 文章内容 -->
   <div class="col-md-13 aside3-content">
     <hr>
     <div id="content">
