--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -12,7 +12,7 @@
         <li><a class="pjaxlink" href="/pages/technology.html">技术</a></li>
         <li><a class="pjaxlink" href="/pages/product.html">产品</a></li>
         <li><a class="pjaxlink" href="/pages/creation.html">创作</a></li>
-        <li><a class="pjaxlink" href="/pages/photography.html">摄影</a></li>
+        <li><a class="pjaxlink" href="/pages/travel.html">旅行</a></li>
         <li><a class="pjaxlink" href="/pages/porker.html">德州</a></li>
         <li><a class="pjaxlink" href="/pages/others.html">其他</a></li>
        <!-- <li><a href="#tags" data-toggle="tab">{{ site.locals.tags }}</a></li>  -->
