--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,3 +10,4 @@
 <script src="/public/js/jquery.pjax.js"></script>
 <script src="/public/js/prettify/prettify.js"></script>
 <script src="/public/js/base.js"></script>
+<script src="/public/js/jquery.fancybox.min.js"></script>
