修改目录结构；调整atom

--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -6,15 +6,15 @@
       </a>-->
       <ul class="nav nav-pills nav-stacked">
         <li><a class="pjaxlink" href="/">首页</a></li>
-        <li><a class="pjaxlink" href="/pages/life.html">生活</a></li>
-        <li><a class="pjaxlink" href="/pages/work.html">工作</a></li>
-        <li><a class="pjaxlink" href="/pages/trade.html">交易</a></li>
+        <li><a class="pjaxlink" href="/pages/essence.html">精华</a></li>
         <li><a class="pjaxlink" href="/pages/technology.html">技术</a></li>
-        <li><a class="pjaxlink" href="/pages/product.html">产品</a></li>
+        <li><a class="pjaxlink" href="/pages/trade.html">交易</a></li>
         <li><a class="pjaxlink" href="/pages/creation.html">创作</a></li>
+        <!--<li><a class="pjaxlink" href="/pages/product.html">产品</a></li>-->
+        <li><a class="pjaxlink" href="/pages/life.html">生活</a></li>
         <li><a class="pjaxlink" href="/pages/travel.html">旅行</a></li>
         <li><a class="pjaxlink" href="/pages/porker.html">德州</a></li>
-        <li><a class="pjaxlink" href="/pages/others.html">其他</a></li>
+        <li><a class="pjaxlink" href="/pages/trash.html">废纸篓</a></li>
        <!-- <li><a href="#tags" data-toggle="tab">{{ site.locals.tags }}</a></li>  -->
         <li><a class="pjaxlink" href="/pages/archive.html">{{ site.locals.archive }}</a></li>
       </ul>
