修改目录结构；调整atom

--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -14,7 +14,7 @@
         <li><a class="pjaxlink" href="/pages/life.html">生活</a></li>
         <li><a class="pjaxlink" href="/pages/travel.html">旅行</a></li>
         <li><a class="pjaxlink" href="/pages/porker.html">德州</a></li>
-        <li><a class="pjaxlink" href="/pages/trash.html">废纸篓</a></li>
+        <li><a class="pjaxlink" href="/pages/trash.html">废弃</a></li>
        <!-- <li><a href="#tags" data-toggle="tab">{{ site.locals.tags }}</a></li>  -->
         <li><a class="pjaxlink" href="/pages/archive.html">{{ site.locals.archive }}</a></li>
       </ul>
