--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -15,9 +15,11 @@
         <li><a class="pjaxlink" href="/pages/travel.html">旅行</a></li>
         <li><a class="pjaxlink" href="/pages/life.html">生活</a></li>
         <li><a class="pjaxlink" href="/pages/porker.html">德州</a></li>
-        <li><a class="pjaxlink" href="/pages/trash.html">废弃</a></li>
-       <!-- <li><a href="#tags" data-toggle="tab">{{ site.locals.tags }}</a></li>  -->
         <li><a class="pjaxlink" href="/pages/archive.html">{{ site.locals.archive }}</a></li>
+        <li><a class="pjaxlink" href="/pages/trash.html">废弃</a></li>
+        <!--<li><a class="pjaxlink" href="/pages/search.html">搜索</a></li>-->
+       <!-- <li><a href="#tags" data-toggle="tab">{{ site.locals.tags }}</a></li>  -->
+
       </ul>
     </div>
 
