add description;modify index.html;

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,8 @@ layout: base
     <div id="content">
         {{ content }}
     </div>
+    <!--{% include share.html %}-->
+
     <hr>
   </div>
 
@@ -25,5 +27,7 @@ layout: base
       <div class="panel-body" id="nav"></div>
     </div>
   </div>
+
+
 </div>
 
