--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -9,7 +9,7 @@
         <li><a class="pjaxlink" href="/pages/essence.html">精华</a></li>
         <li><a class="pjaxlink" href="/pages/technology.html">技术</a></li>
         <li><a class="pjaxlink" href="/pages/trade.html">交易</a></li>
-        <li><a class="pjaxlink" href="/pages/business.html">商业</a></li>
+        <!--<li><a class="pjaxlink" href="/pages/business.html">商业</a></li>-->
         <li><a class="pjaxlink" href="/pages/creation.html">创作</a></li>
         <!--<li><a class="pjaxlink" href="/pages/product.html">产品</a></li>-->
         <li><a class="pjaxlink" href="/pages/travel.html">旅行</a></li>
@@ -18,6 +18,7 @@
         <li><a class="pjaxlink" href="/pages/archive.html">{{ site.locals.archive }}</a></li>
         <li><a class="pjaxlink" href="/pages/trash.html">废弃</a></li>
         <li><a class="pjaxlink" href="/pages/resume.html">简历</a></li>
+        <li><a class="pjaxlink" href="/pages/about.html">关于</a></li>
         <!--<li><a class="pjaxlink" href="/pages/search.html">搜索</a></li>-->
        <!-- <li><a href="#tags" data-toggle="tab">{{ site.locals.tags }}</a></li>  -->
 
