--- a/_includes/header_title.html
+++ b/_includes/header_title.html
@@ -10,6 +10,7 @@
 {% seo %}
 <link rel="shortcut icon" href="{{ site.favicon }}" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="msvalidate.01" content="76B177235172097DAFF78A0C750658B1" />
 <meta name="baidu-site-verification" content="BjJPWTE1T9" />
 <link rel="stylesheet" href="/public/css/bootstrap.css">
 <link rel="stylesheet" href="/public/css/font-awesome.css">
