--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,12 +10,12 @@
 <script src="/public/js/jquery.pjax.js"></script>
 <script src="/public/js/prettify/prettify.js"></script>
 <script src="/public/js/base.js"></script>
-<script src="/public/js/jquery.fancybox.min.js"></script>
-<div id="google_translate_element"></div>
+<!--<script src="/public/js/jquery.fancybox.min.js"></script>-->
+<!--<div id="google_translate_element"></div>
 <script type="text/javascript">
     function googleTranslateElementInit() {
         new google.translate.TranslateElement({pageLanguage: 'zh-CN', includedLanguages: 'en', layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT, gaTrack: true, gaId: 'UA-49965095-1'}, 'google_translate_element');
     }
 </script>
-<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>-->
 
