add comment html;

--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,1 +1,8 @@
+<!--<div id="disqus_thread">
+    <button type="button" name="{{ site.disqus.shortname }}" class="btn btn-default show-commend">
+        <i class="fa fa-comment-o fa-lg" style="color: #16a095;"></i>     &lt;!&ndash; 修改显示评论按钮图标&ndash;&gt;
+    </button>
+</div>-->
 <!--评论-->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2123019"></script>
