--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,5 +21,5 @@
 <link rel="stylesheet" href="/public/css/base.css">
 <link rel="stylesheet" href="/public/css/jquery.fancybox.min.css" >
 <link href="/pages/atom.xml" rel="alternate" title="{{site.title}}" type="application/atom+xml">
-<link rel="alternate" hreflang="x-default" href="http://3gods.com/" />
-<link rel="alternate" hreflang="zh-Hans" href="http://3gods.com/" />
+<!--<link rel="alternate" hreflang="x-default" href="http://3gods.com/" />
+<link rel="alternate" hreflang="zh-Hans" href="http://3gods.com/" />-->
