--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,10 @@ layout: base
     <div id="content">
         {{ content }}
     </div>
+
+<!--    <hr>
+    {% include share.html %}-->
+
     <hr>
     {% include comment.html %}
   </div>
