--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,25 +1,33 @@
 <div id="share">
-<ul class="share-buttons">
-    <li><a href="https://plus.google.com/share?url=http%3A%2F%2F3gods.com" target="_blank" title="Share on Google+">
-        <img alt="Share on Wechat" src="{{site.url}}/public/img/share/WeChat.svg" />
+    <p>
+
+    </p>
+    <ul class="share-buttons">
+        <li>
+            <a href="https://plus.google.com/share?url={{site.url}}{{page.url}}" target="_blank" title="Share on Wechat">
+                <img alt="Share on Wechat" src="{{site.url}}/public/img/share/WeChat.svg"/>
+            </a>
+        </li>
+        <li>
+            <a href="https://plus.google.com/share?url={{site.url}}{{page.url}}" target="_blank" title="Share on Weibo">
+                <img alt="Share on Weibo" src="{{site.url}}/public/img/share/Weibo.svg"/>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.facebook.com/sharer/sharer.php?u={{site.url}}{{page.url}}&t={{page.title}}"
+               title="Share on Facebook" target="_blank">
+                <img alt="Share on Facebook" src="{{site.url}}/public/img/share/Facebook.svg"/>
+            </a>
+        </li>
+        <li>
+            <a href="https://twitter.com/intent/tweet?source={{site.url}}{{page.url}}&text={{page.title}}"
+               target="_blank" title="Tweet">
+                <img alt="Tweet" src="{{site.url}}/public/img/share/Twitter.svg"/>
+            </a>
+        </li>
+        <li><a href="https://plus.google.com/share?url={{site.url}}{{page.url}}" target="_blank" title="Share on Google+">
+            <img alt="Share on Google+" src="{{site.url}}/public/img/share/Google+.svg"/>
         </a>
-    </li>
-    <li><a href="https://plus.google.com/share?url=http%3A%2F%2F3gods.com" target="_blank" title="Share on Google+">
-        <img alt="Share on Weibo" src="{{site.url}}/public/img/share/Weibo.svg" />
-    </a>
-    </li>
-
-    <li><a href="https://plus.google.com/share?url=http%3A%2F%2F3gods.com" target="_blank" title="Share on Google+">
-        <img alt="Share on Google+" src="{{site.url}}/public/img/share/Google+.svg" />
-    </a>
-    </li>
-
-    <li><a href="https://plus.google.com/share?url=http%3A%2F%2F3gods.com" target="_blank" title="Share on Google+">
-        <img alt="Share on Google+" src="{{site.url}}/public/img/share/Google+.svg" />
-    </a>
-    </li>
-</ul>
+        </li>
+    </ul>
 </div>
-
-<!--    <hr>
-    {% include share.html %}-->
