--- a/_includes/share.html
+++ b/_includes/share.html
@@ -5,7 +5,7 @@
 
     <ul class="share-buttons">
         <li>
-            <a href="{{site.url}}{{page.url}}" target="_blank" title="Share on Wechat">
+            <a href="#" target="_blank" title="Share on Wechat">
                 <img alt="Share on Wechat" src="{{site.url}}/public/img/share/WeChat.svg"/>
                      <!--onmouseover="$('#qrcode').qrcode({width: 100, height: 100, text: 'hello'})-->
             </a>
