add life islike playing dota;

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,4 +10,8 @@
 <script src="/public/js/jquery.pjax.js"></script>
 <script src="/public/js/prettify/prettify.js"></script>
 <script src="/public/js/base.js"></script>
-<!--<script src="/public/js/jquery.qrcode.min.js"></script>-->
+<!--
+<script src="/public/js/jquery.qrcode.min.js"></script>
+<script type="text/javascript">
+    $('#qrcode').qrcode({width: 100, height: 100, text: location.href});
+</script>-->
