--- a/_includes/share.html
+++ b/_includes/share.html
@@ -6,8 +6,8 @@
     <ul class="share-buttons">
         <li>
             <a href="#" target="_blank" title="Share on Wechat">
+                <div id="qrcode"></div>
                 <img alt="Share on Wechat" src="{{site.url}}/public/img/share/WeChat.svg"/>
-                     <!--onmouseover="$('#qrcode').qrcode({width: 100, height: 100, text: 'hello'})-->
             </a>
         </li>
         &nbsp;
