--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -5,14 +5,14 @@
 
       <ul class="nav nav-pills nav-stacked">
         <li><a class="pjaxlink" href="/">首页</a></li>
-        <li><a class="pjaxlink" href="/pages/technology.html">技术</a></li>
-        <li><a class="pjaxlink" href="/pages/growing.html">成长</a></li>
-        <li><a class="pjaxlink" href="/pages/trade.html">交易</a></li>
-        <li><a class="pjaxlink" href="/pages/creation.html">创作</a></li>
-        <li><a class="pjaxlink" href="/pages/travel.html">旅行</a></li>
-        <li><a class="pjaxlink" href="/pages/life.html">生活</a></li>
-        <li><a class="pjaxlink" href="/pages/archive.html">{{ site.locals.archive }}</a></li>
-        <li><a class="pjaxlink" href="/pages/about.html">关于</a></li>
+        <li><a class="pjaxlink" href="/tech.html">技术</a></li>
+        <li><a class="pjaxlink" href="/growing.html">成长</a></li>
+        <li><a class="pjaxlink" href="/trade.html">交易</a></li>
+        <li><a class="pjaxlink" href="/creation.html">创作</a></li>
+        <li><a class="pjaxlink" href="/travel.html">旅行</a></li>
+        <li><a class="pjaxlink" href="/life.html">生活</a></li>
+        <li><a class="pjaxlink" href="/archive.html">{{ site.locals.archive }}</a></li>
+        <li><a class="pjaxlink" href="/about.html">关于</a></li>
       </ul>
     </div>
 
