--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,8 @@ layout: base
         <br>
         <hr>
         {% include share.html %}
-
+        <hr>
+        {% include beian.html %}
         <hr>
     </div>
 
