optimize website structure;

--- a/_layouts/page_title.html
+++ b/_layouts/page_title.html
@@ -10,6 +10,10 @@ layout: base_title
     <div id="page-content">
       {{ content }}
     </div>
-    
+
+    <br>
+    <hr>
+    {% include beian.html %}
+    <hr>
   </div>
 </div>
