--- a/_includes/beian.html
+++ b/_includes/beian.html
@@ -1,5 +1,5 @@
 <div id="beian" align="center">
-    <p align="center">
-    <a href="http://www.miitbeian.gov.cn" rel="nofollow">粤ICP备17122701号</a>
-    </p>
+
+    <a href="http://www.miitbeian.gov.cn" target="_blank" rel="nofollow"><span style="color:black;">粤ICP备17122701号</span></a>
+
 </div>
