--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,7 @@ layout: base
     <div class="col-md-15 aside3-content">
         <hr>
         <div id="content">
+            <p>本文原创于：<a href="http://3gods.com">宋鑫的官方网站</a>，原文地址为：http://3gods.com{{page.url}}</p>
             {{ content }}
         </div>
 
