--- a/public/css/base.css
+++ b/public/css/base.css
@@ -149,3 +149,11 @@ ul.share-buttons .sr-only{
 ul.share-buttons img{
   width: 32px;
 }
+
+span.beian{
+  color:black;
+  font-size: 16px;
+  padding: 1em;
+  text-align: center;
+
+}
