--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,19 @@
   <button id="nav_btn" class="btn btn-primary">
     <i class="fa fa-lg fa-navicon"></i>
   </button>
+  <div class="aside1">
+    <ul class="nav nav-pills nav-stacked">
+      <li><a class="pjaxlink" href="/">首页</a></li>
+      <li><a class="pjaxlink" href="/tech.html">技术</a></li>
+      <li><a class="pjaxlink" href="/growing.html">成长</a></li>
+      <li><a class="pjaxlink" href="/trade.html">交易</a></li>
+      <li><a class="pjaxlink" href="/creation.html">创作</a></li>
+      <li><a class="pjaxlink" href="/travel.html">旅行</a></li>
+      <li><a class="pjaxlink" href="/life.html">生活</a></li>
+      <li><a class="pjaxlink" href="/archive.html">{{ site.locals.archive }}</a></li>
+      <li><a class="pjaxlink" href="/about.html">关于</a></li>
+    </ul>
+  </div>
 </div>
 
 
