--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
 <head>
-
   {% include header.html %}
+  {% include baiduanalytics.html %}
 </head>
 <body>
   <div class="container">
+
     <div class="row">
-      {% include navside.html %}
-      <div class="col-md-13 col-lg-13 col-sm-13 col-xs-13 aside3">
+      <div class="col-md-16 col-lg-16 col-sm-16 col-xs-16 aside3 col-md-13 col-lg-13">
         <div id="container">
           <div id="pjax">
             {{ content }}
