--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: base
     <br>
     <h2 id="#identifier">{{ page.title }}</h2>
   </div>
-  <div class="col-md-13 aside3-content">
+  <div class="aside3-content col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
     <div id="page-content">
       {{ content }}
     </div>
