--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,11 +17,12 @@ layout: base
     </div>
 
     <!-- 文章内容 -->
-    <div class="col-md-15 aside3-content">
+    <div class="col-md-15 aside3-content col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
         <hr>
         <div id="content">
-            <p>本文原创于：<a href="http://3gods.com">宋鑫的官方网站</a>，原文地址为：http://3gods.com{{page.url}}</p>
+            <p>本文原创于：<a href="http://3gods.com">宋鑫的官方网站</a>，原文地址为：http://3gods.com{{page.url}}，转载请注明出处，谢谢。</p>
             {{ content }}
+
         </div>
 
         <br>
