--- a/_includes/breadcrumb.html
+++ b/_includes/breadcrumb.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="col-md-15 aside3-breadcrumb">
+    <ul class="breadcrumb">
+        <li><a href="/"> 首页</a></li>
+        <li><a href="{{site.url}}/{{page.categories}}"> 大数据</a></li>
+        <li><a href="#">{{page.title}}</a></li>
+        <li>{{page.title}}</li>
+    </ul>
+</div>
