--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,8 @@ layout: base
 ---
 
 <div class="row">
+    <!--导航面包屑-->
+    {% include breadcrumb.html %}
     <!-- 文章标题 -->
     <div class="col-md-15 aside3-title">
         <br>
