git add htaccess 301redirect;

--- a/_includes/beian.html
+++ b/_includes/beian.html
@@ -1,6 +1,6 @@
 <div id="beian" align="center">
 
-    <a href="/">宋鑫的官方网站 3gods.com &copy;2013-{{ 'now' | date: "%Y" }}</a>
+    <a href="/">3gods.com &copy;2013-{{ 'now' | date: "%Y" }}</a>
     <a href="http://www.miitbeian.gov.cn" target="_blank" rel="nofollow">
         <span class="beian">粤ICP备17122701号</span>
     </a>
