--- a/_layouts/base_title.html
+++ b/_layouts/base_title.html
@@ -7,6 +7,7 @@
 <body>
   <div class="container">
     <div class="row">
+      {% include navside.html %}
       <div class="col-md-16 col-lg-16 col-sm-16 col-xs-16 aside3 col-md-13 col-lg-13">
         <div id="container">
           <div id="pjax">
