add data dir; replace img url; add some bad post;

--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -11,7 +11,7 @@
       <li><a class="pjaxlink" href="/creation.html">创作</a></li>
       <li><a class="pjaxlink" href="/travel.html">旅行</a></li>
       <li><a class="pjaxlink" href="/life.html">生活</a></li>
-      <li><a class="pjaxlink" href="/archive.html">{{ site.locals.archive }}</a></li>
+      <li><a class="pjaxlink" href="/archive.html">归档</a></li>
       <li><a class="pjaxlink" href="/about.html">关于</a></li>
       <!--分类，但是不展现，为seo-->
       <li><a class="pjaxlink" style="display: none" href="/bigdata.html">大数据</a></li>
