--- a/_includes/share.html
+++ b/_includes/share.html
@@ -7,41 +7,47 @@
         <li>
             <a href="#" target="_blank" title="Share on Wechat">
                 <div id="qrcode"></div>
-                <img alt="Share on Wechat" src="{{site.url}}/public/img/share/WeChat.svg"/>
+                <img alt="Share on Wechat" src="http://3gods.com/public/img/share/WeChat.svg"/>
             </a>
         </li>
         &nbsp;
         <li>
-            <a href="http://service.weibo.com/share/share.php?url={{site.url}}&title={{page.title}}" target="_blank"
+            <a href="http://service.weibo.com/share/share.php?url=http://3gods.com&title={{page.title}}" target="_blank"
                title="Share on Weibo">
-                <img alt="Share on Weibo" src="{{site.url}}/public/img/share/Weibo.svg"/>
+                <img alt="Share on Weibo" src="http://3gods.com/public/img/share/Weibo.svg"/>
             </a>
         </li>
         &nbsp;
-        <li>
-            <a href="https://www.facebook.com/sharer/sharer.php?u={{site.url}}{{page.url}}&t={{page.title}}"
-               title="Share on Facebook" target="_blank">
-                <img alt="Share on Facebook" src="{{site.url}}/public/img/share/Facebook.svg"/>
-            </a>
-        </li>
-        &nbsp;
-        <li>
-            <a href="https://twitter.com/intent/tweet?source={{site.url}}{{page.url}}&text={{page.title}}"
-               target="_blank" title="Tweet">
-                <img alt="Tweet" src="{{site.url}}/public/img/share/Twitter.svg"/>
-            </a>
-        </li>
-        &nbsp;
-        <li><a href="https://plus.google.com/share?url={{site.url}}{{page.url}}" target="_blank"
+        <li><a href="https://plus.google.com/share?url=http://3gods.com{{page.url}}" target="_blank"
                title="Share on Google+">
-            <img alt="Share on Google+" src="{{site.url}}/public/img/share/Google+.svg"/>
+            <img alt="Share on Google+" src="http://3gods.com/public/img/share/Google+.svg"/>
         </a>
+        </li>
+        &nbsp;
+        <li><a href="http://www.linkedin.com/shareArticle?mini=true&url=http://3gods.com{{page.url}}&title={{page.title}}&source=http://3gods.com{{page.url}}"
+               target="_blank" title="Share on LinkedIn">
+            <img alt="Share on LinkedIn" src="http://3gods.com/public/img/share/LinkedIn.svg"/>
+        </a>
+        </li>
+        &nbsp;
+        <li>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=http://3gods.com{{page.url}}&t={{page.title}}"
+               title="Share on Facebook" target="_blank">
+                <img alt="Share on Facebook" src="http://3gods.com/public/img/share/Facebook.svg"/>
+            </a>
+        </li>
+        &nbsp;
+        <li>
+            <a href="https://twitter.com/intent/tweet?source=http://3gods.com{{page.url}}&text={{page.title}}"
+               target="_blank" title="Tweet">
+                <img alt="Tweet" src="http://3gods.com/public/img/share/Twitter.svg"/>
+            </a>
         </li>
     </ul>
 
     <br>
     <p style="font-size:18px;font-weight: bold">
         更多精彩干货，尽请关注我的个人微信公众号<br>
-        <img alt="wechat" src="{{site.url}}/public/img/wechat.jpg"/>
+        <img alt="wechat" src="http://3gods.com/public/img/wechat.jpg"/>
     </p>
 </div>
