--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,6 +15,6 @@
 <link rel="stylesheet" href="/public/js/prettify/prettify.css">
 <link rel="stylesheet" href="/public/css/base.css">
 <link rel="stylesheet" href="/public/css/jquery.fancybox.min.css" >
-<link href="/pages/atom.xml" rel="alternate" title="{{site.title}}" type="application/atom+xml">
+<link href="/atom.xml" rel="alternate" title="{{site.title}}" type="application/atom+xml">
 
 
