--- a/public/css/base.css
+++ b/public/css/base.css
@@ -19,11 +19,12 @@ body, html {
 /* 左侧导航栏 */
 .aside1 {
   background-color: #1abc9c;
-  height: 100%;
+  /*height: 100%;*/
+  height:120px;
   padding-left: 0px;
   padding-right: 0px;
   text-align: center;
-  display: none;
+  /*display: none;*/
 }
 .aside1 > .nav > li > a {
   padding-left: 0px;
@@ -156,5 +157,28 @@ span.beian{
   font-size: 12px;
   padding: 1em;
   text-align: center;
+}
+
+#captioned-gallery figure {
+  margin: 0; background: #101010;
+  font-family: Istok Web, sans-serif;
+  font-weight: 100;
+}
+div#captioned-gallery {
+  width: 100%; overflow: hidden;
+}
+#captioned-gallery figure.slider {
+  position: relative; width: 500%;
+  font-size: 0; animation: 30s slidy infinite;
+}
+#captioned-gallery figure.slider figure {
+  width: 20%; height: auto;
+  display: inline-block;  position: inherit;}
+#captioned-gallery figure.slider img { width: 100%; height: auto; }
+#captioned-gallery figure.slider figure figcaption {
+  position: absolute; bottom: 0;
+  background: rgba(0,0,0,0.4);
+  color: #fff; width: 100%;
+  font-size: 2rem; padding: .6rem;
 }
 
