add data dir; replace img url; add some bad post;

--- a/_includes/share.html
+++ b/_includes/share.html
@@ -12,7 +12,7 @@
         </li>
         &nbsp;
         <li>
-            <a href="http://service.weibo.com/share/share.php?url=http://3gods.com&title={{page.title}}" target="_blank"
+            <a href="http://service.weibo.com/share/share.php?url=http://3gods.com{{page.url}}&title={{page.title}}" target="_blank"
                title="Share on Weibo">
                 <img alt="Share on Weibo" src="http://3gods.com/public/img/share/Weibo.svg"/>
             </a>
