--- a/public/css/base.css
+++ b/public/css/base.css
@@ -19,12 +19,11 @@ body, html {
 /* 左侧导航栏 */
 .aside1 {
   background-color: #1abc9c;
-  /*height: 100%;*/
-  height:120px;
+  height: 100%;
   padding-left: 0px;
   padding-right: 0px;
   text-align: center;
-  /*display: none;*/
+  display: none;
 }
 .aside1 > .nav > li > a {
   padding-left: 0px;
