add kafka related post;

--- a/_includes/share.html
+++ b/_includes/share.html
@@ -38,7 +38,7 @@
         </li>
         &nbsp;
         <li>
-            <a href="https://twitter.com/intent/tweet?source=http://3gods.com{{page.url}}&text={{page.title}}"
+            <a href="https://twitter.com/intent/tweet?source=http://3gods.com{{page.url}}&text={{page.title}} http://3gods.com{{page.url}}"
                target="_blank" title="Tweet">
                 <img alt="Tweet" src="http://3gods.com/public/img/share/Twitter.svg"/>
             </a>
