change category; add seo institute and GFS;

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,11 +32,11 @@ layout: base
     </div>
 
     <!-- 目录 -->
-    <div id="content_table" style="position:fixed;right:20px;top:120px;display:none;">
+    <!--<div id="content_table" style="position:fixed;right:20px;top:120px;display:block;">
         <div class="panel panel-success">
             <div class="panel-body" id="nav"></div>
         </div>
-    </div>
+    </div>-->
 
 </div>
 
