--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -1,7 +1,4 @@
-<div style="position:fixed;right:15px;top:20px;">
-  <button id="nav_btn" class="btn btn-primary">
-    <i class="fa fa-lg fa-navicon"></i>
-  </button>
+<div id="myNav">
   <div class="aside1">
     <ul class="nav nav-pills nav-stacked">
       <li><a class="pjaxlink" href="/">首页</a></li>
