--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,6 +1,6 @@
 <div id="share">
     <p style="font-size:18px;font-weight: bold">
-        文章有用？分享给你的朋友们，让更多的人受到益处
+        文章有用？分享给你的朋友们，让更多的人受益
     </p>
 
     <ul class="share-buttons">
