--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -1,22 +1,20 @@
-<div id="myNav">
-  <div class="aside1">
-    <ul class="nav nav-pills nav-stacked">
-      <li><a class="pjaxlink" href="/">首页</a></li>
-      <li><a class="pjaxlink" href="/tech.html">技术</a></li>
-      <li><a class="pjaxlink" href="/growing.html">成长</a></li>
-      <li><a class="pjaxlink" href="/trade.html">交易</a></li>
-      <li><a class="pjaxlink" href="/creation.html">创作</a></li>
-      <li><a class="pjaxlink" href="/travel.html">旅行</a></li>
-      <li><a class="pjaxlink" href="/life.html">生活</a></li>
-      <li><a class="pjaxlink" href="/archive.html">归档</a></li>
-      <li><a class="pjaxlink" href="/about.html">关于</a></li>
-      <!--分类，但是不展现，为seo-->
-      <li><a class="pjaxlink" style="display: none" href="/bigdata.html">大数据</a></li>
-      <li><a class="pjaxlink" style="display: none" href="/career.html">职场发展</a></li>
-      <li><a class="pjaxlink" style="display: none" href="/note.html">读书笔记</a></li>
-      <li><a class="pjaxlink" style="display: none" href="/stock.html">股票</a></li>
-      <li><a class="pjaxlink" style="display: none" href="/tips.html">小贴士</a></li>
+<div class="aside1">
+    <ul class="nav nav-pills" style="width: 58%">
+        <li><a class="pjaxlink" href="/">首页</a></li>
+        <li><a class="pjaxlink" href="/tech.html">编程</a></li>
+        <li><a class="pjaxlink" href="/creation.html">创作</a></li>
+        <li><a class="pjaxlink" href="/trade.html">交易</a></li>
+        <li><a class="pjaxlink" href="/growing.html">成长</a></li>
+        <li><a class="pjaxlink" href="/travel.html">旅行</a></li>
+        <li><a class="pjaxlink" href="/life.html">生活</a></li>
+        <li><a class="pjaxlink" href="/archive.html">归档</a></li>
+        <li><a class="pjaxlink" href="/about.html">关于</a></li>
 
+        <li><a class="pjaxlink" style="display: none" href="/bigdata.html">大数据</a></li>
+        <li><a class="pjaxlink" style="display: none" href="/career.html">职场发展</a></li>
+        <li><a class="pjaxlink" style="display: none" href="/note.html">读书笔记</a></li>
+        <li><a class="pjaxlink" style="display: none" href="/stock.html">股票</a></li>
+        <li><a class="pjaxlink" style="display: none" href="/tips.html">小贴士</a></li>
     </ul>
-  </div>
+
 </div>
