--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -1,5 +1,10 @@
+<div style="position:fixed;right:20px;top:30px;">
+    <button id="nav_btn" class="btn btn-primary">
+        <i class="fa fa-lg fa-plus" style="width: 26.5px"></i>
+    </button>
+
 <div class="aside1">
-    <ul class="nav nav-pills" style="width: 58%">
+    <ul class="nav nav-pills nav-stacked">
         <li><a class="pjaxlink" href="/">首页</a></li>
         <li><a class="pjaxlink" href="/tech.html">编程</a></li>
         <li><a class="pjaxlink" href="/creation.html">创作</a></li>
@@ -17,4 +22,5 @@
         <li><a class="pjaxlink" style="display: none" href="/tips.html">小贴士</a></li>
     </ul>
 
+</div>
 </div>
