add changyan comments;

--- a/_includes/share.html
+++ b/_includes/share.html
@@ -47,7 +47,7 @@
 
     <br>
     <p style="font-size:18px;font-weight: bold">
-        更多精彩干货，尽请关注我的个人微信公众号<br>
+        更多精彩干货，尽请关注我的个人微信公众号：禅与黑客<br>
         <img alt="wechat" src="http://3gods.com/public/img/wechat.jpg"/>
     </p>
 </div>
