--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,6 +27,8 @@ layout: base
         <br>
         {% include share.html %}
         <hr>
+        {% include comment.html%}
+        <hr>
         {% include beian.html %}
         <hr>
     </div>
