add changyan comments;

--- a/_includes/share.html
+++ b/_includes/share.html
@@ -46,8 +46,15 @@
     </ul>
 
     <br>
+
+    <p style="font-size:18px;font-weight: bold">
+        每个人的内心都渴望被他人认可，您的赞赏是对我的最大鼓励与支持<br>
+        <img alt="appreciate_ali" class="appreciate" src="http://localhost:4000/public/img/appreciate_ali.png"/>
+        <img alt="appreciate_wx" class="appreciate" src="http://localhost:4000/public/img/appreciate_wx.png"/>
+    </p>
+
     <p style="font-size:18px;font-weight: bold">
         更多精彩干货，尽请关注我的个人微信公众号：禅与黑客<br>
-        <img alt="wechat" src="http://3gods.com/public/img/wechat.jpg"/>
+        <img alt="wechat" class="appreciate" src="http://3gods.com/public/img/wechat.jpg"/>
     </p>
 </div>
