--- a/public/css/base.css
+++ b/public/css/base.css
@@ -193,3 +193,9 @@ span.beian{
   font-size: 24px;
   text-align: center;
 }
+.appreciate{
+  width: 300px;
+  height: 300px;
+  margin: 18px 30px 10px 0px;
+  border: solid 2px #16a085;
+}
