--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,9 +25,9 @@ layout: base
         </div>
 
         <br>
-        {% include share.html %}
+        <!--{% include share.html %}-->
         <hr>
-        {% include comment.html%}
+       <!-- {% include comment.html%}-->
         <hr>
         {% include beian.html %}
         <hr>
