add redis monitor

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,13 +24,11 @@ layout: base
             {{ content }}
         </div>
 
-        <br>
-
         <hr>
+        <!--{% include comments.html %}-->
 
-        <hr>
         {% include beian.html %}
-        <hr>
+
     </div>
 
     <!-- 目录 -->
