--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -1,26 +1,89 @@
-<div style="position:fixed;right:20px;top:30px;">
-    <button id="nav_btn" class="btn btn-primary">
-        <i class="fa fa-lg fa-plus" style="width: 26.5px"></i>
-    </button>
+<nav class="navbar navbar-default" role="navigation">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">
+            <img alt="Brand" src="/public/img/fav.ico">
+            </a>
+    </div>
 
-<div class="aside1">
-    <ul class="nav nav-pills nav-stacked">
-        <li><a class="pjaxlink" href="/">首页</a></li>
-        <li><a class="pjaxlink" href="/tech.html">编程</a></li>
-        <li><a class="pjaxlink" href="/creation.html">创作</a></li>
-        <li><a class="pjaxlink" href="/trade.html">交易</a></li>
-        <li><a class="pjaxlink" href="/growing.html">成长</a></li>
-        <li><a class="pjaxlink" href="/travel.html">旅行</a></li>
-        <li><a class="pjaxlink" href="/life.html">生活</a></li>
-        <li><a class="pjaxlink" href="/archive.html">归档</a></li>
-        <li><a class="pjaxlink" href="/about.html">关于</a></li>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <ul class="nav navbar-nav ">
+            <li class="dropdown">
+                <a href="/tech.html" class="dropdown-toggle" data-toggle="dropdown">编程 <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="/redis.html">Redis</a></li>
+                    <li><a href="/database.html">数据库</a></li>
+                    <li><a href="/bigdata.html">大数据</a></li>
+                    <li><a href="/opensource.html">开源</a></li>
+                    <li><a href="/project.html">项目总结</a></li>
+                </ul>
+            </li>
 
-        <li><a class="pjaxlink" style="display: none" href="/bigdata.html">大数据</a></li>
-        <li><a class="pjaxlink" style="display: none" href="/career.html">职场发展</a></li>
-        <li><a class="pjaxlink" style="display: none" href="/note.html">读书笔记</a></li>
-        <li><a class="pjaxlink" style="display: none" href="/stock.html">股票</a></li>
-        <li><a class="pjaxlink" style="display: none" href="/tips.html">小贴士</a></li>
-    </ul>
+            <li class="dropdown">
+                <a href="/trade.html" class="dropdown-toggle" data-toggle="dropdown">交易 <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="/stock.html">股票</a></li>
+                    <li><a href="/future.html">期货</a></li>
+                    <li><a href="/tradesystem.html">交易系统</a></li>
+                    <li><a href="/porker.html">德州扑克</a></li>
+                </ul>
+            </li>
 
-</div>
-</div>
+            <li><a href="/career.html">职场&nbsp;</a></li>
+            <li class="dropdown">
+                <a href="/growing.html" class="dropdown-toggle" data-toggle="dropdown">成长 <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="/tips.html">小贴士</a></li>
+                    <li><a href="/zen.html">禅</a></li>
+                    <li><a href="/essay.html">感想</a></li>
+                    <li><a href="/trash.html">废弃</a></li>
+
+                </ul>
+            </li>
+
+            <li class="dropdown">
+                <a href="/creation.html" class="dropdown-toggle" data-toggle="dropdown">创作 <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="/book.html">书单</a></li>
+                    <li><a href="/note.html">笔记</a></li>
+                    <li><a href="/essay.html">感想</a></li>
+                    <li><a href="/trash.html">废弃</a></li>
+
+                </ul>
+            </li>
+
+            <li class="dropdown">
+                <a href="/creation.html" class="dropdown-toggle" data-toggle="dropdown">生活 <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="/book.html">旅行</a></li>
+                    <li><a href="/note.html">摄影</a></li>
+                    <li><a href="/essay.html"></a></li>
+                    <li><a href="/essay.html">感想</a></li>
+                    <li><a href="/trash.html">废弃</a></li>
+
+                </ul>
+            </li>
+
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">站长 <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">SEO</a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#">Something else here</a></li>
+                    <li><a href="#">Separated link</a></li>
+                    <li><a href="#">One more separated link</a></li>
+                </ul>
+            </li>
+
+            <li><a href="/archive.html">归档</a></li>
+            <li><a href="/about.html">关于</a></li>
+        </ul>
+    </div><!-- /.navbar-collapse -->
+</nav>
