--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,12 +5,12 @@
   {% include baiduanalytics.html %}
 </head>
 <body>
+
   <div class="container">
     <div class="row">
-      {% include navside.html %}
-      <div class="col-md-16 col-lg-16 col-sm-16 col-xs-16 aside3 col-md-13 col-lg-13">
-        <div id="container">
-
+      <div class="col-md-16 col-lg-16 col-sm-16 col-xs-16 aside3">
+        <div>
+          {% include navside.html %}
           <div id="pjax">
 
             {{ content }}
