--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -1,5 +1,4 @@
 <nav class="navbar navbar-default" role="navigation">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -8,11 +7,10 @@
             <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="/">
-            <img alt="Brand" src="/public/img/fav.ico">
+            <img alt="3gods.com logo" src="/public/img/fav.ico">
             </a>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav ">
             <li class="dropdown">
@@ -75,15 +73,12 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">站长 <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a href="#">SEO</a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
+
                 </ul>
             </li>
 
             <li><a href="/archive.html">归档</a></li>
             <li><a href="/about.html">关于</a></li>
         </ul>
-    </div><!-- /.navbar-collapse -->
+    </div>
 </nav>
