--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: base
             {{ page.title }}
             {% endif %}
         </h2>
-        jquery-3.3.1.js     {{ site.author.name }} &nbsp;&nbsp; {{ page.date | date:"%Y-%m-%d" }}
+        {{ site.author.name }} &nbsp;&nbsp; {{ page.date | date:"%Y-%m-%d" }}
     </div>
 
     <!-- 文章内容 -->
@@ -27,7 +27,7 @@ layout: base
     </div>
     <!-- 文章评论 -->
     <div class="col-md-15 aside3-content col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
-        
+
     </div>
 
 
